{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 1235,
  "lineage": "c18193b2-2b46-caf3-b9d2-ae4ca9f3bc80",
  "resources": [
    {
      "module": "module.ecs-cluster",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:454340114714:loadbalancer/app/lb-prod/f9a1c75ec0bc6675",
            "arn_suffix": "app/lb-prod/f9a1c75ec0bc6675",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-prod-2074863613.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:454340114714:loadbalancer/app/lb-prod/f9a1c75ec0bc6675",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-prod",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f6f8486efd554a88"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0af41d9e3f06a1851"
              },
              {
                "subnet_id": "subnet-0eb8232855a02a023"
              }
            ],
            "subnets": [
              "subnet-0af41d9e3f06a1851",
              "subnet-0eb8232855a02a023"
            ],
            "vpc_id": "vpc-0f21f0eecab4f3234",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "module.ecs-cluster.aws_security_group.alb_sg",
            "module.rds.aws_cloudwatch_event_rule.this",
            "module.rds.aws_cloudwatch_event_target.this",
            "module.rds.aws_db_instance.this",
            "module.rds.aws_db_subnet_group.this",
            "module.rds.aws_iam_instance_profile.this",
            "module.rds.aws_iam_policy.lambda_basic",
            "module.rds.aws_iam_role.ec2_role",
            "module.rds.aws_iam_role.lambda_role",
            "module.rds.aws_iam_role_policy_attachment.ec2_attach_policies",
            "module.rds.aws_iam_role_policy_attachment.lambda_attach_policies",
            "module.rds.aws_lambda_function.this",
            "module.rds.aws_lambda_permission.allow_cloudwatch",
            "module.rds.aws_s3_bucket.this",
            "module.rds.aws_s3_object.object",
            "module.rds.aws_security_group.db_sg",
            "module.rds.data.archive_file.python_lambda_package",
            "module.rds.data.aws_caller_identity.current",
            "module.rds.data.aws_cloudwatch_event_bus.default",
            "module.rds.data.aws_region.current",
            "module.rds.local_file.name",
            "module.rds.random_id.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-cluster",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:454340114714:listener/app/lb-prod/f9a1c75ec0bc6675/cac10fe482d2580c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:454340114714:targetgroup/tg-prod-lb/8b05298030830733",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:454340114714:listener/app/lb-prod/f9a1c75ec0bc6675/cac10fe482d2580c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:454340114714:loadbalancer/app/lb-prod/f9a1c75ec0bc6675",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs-cluster.aws_lb.this",
            "module.ecs-cluster.aws_lb_target_group.this",
            "module.ecs-cluster.aws_security_group.alb_sg",
            "module.rds.aws_cloudwatch_event_rule.this",
            "module.rds.aws_cloudwatch_event_target.this",
            "module.rds.aws_db_instance.this",
            "module.rds.aws_db_subnet_group.this",
            "module.rds.aws_iam_instance_profile.this",
            "module.rds.aws_iam_policy.lambda_basic",
            "module.rds.aws_iam_role.ec2_role",
            "module.rds.aws_iam_role.lambda_role",
            "module.rds.aws_iam_role_policy_attachment.ec2_attach_policies",
            "module.rds.aws_iam_role_policy_attachment.lambda_attach_policies",
            "module.rds.aws_lambda_function.this",
            "module.rds.aws_lambda_permission.allow_cloudwatch",
            "module.rds.aws_s3_bucket.this",
            "module.rds.aws_s3_object.object",
            "module.rds.aws_security_group.db_sg",
            "module.rds.data.archive_file.python_lambda_package",
            "module.rds.data.aws_caller_identity.current",
            "module.rds.data.aws_cloudwatch_event_bus.default",
            "module.rds.data.aws_region.current",
            "module.rds.local_file.name",
            "module.rds.random_id.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-cluster",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:454340114714:targetgroup/tg-prod-lb/8b05298030830733",
            "arn_suffix": "targetgroup/tg-prod-lb/8b05298030830733",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 25,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 20,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:454340114714:targetgroup/tg-prod-lb/8b05298030830733",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-prod-lb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f21f0eecab4f3234"
          },
          "dependencies": [
            "module.rds.aws_cloudwatch_event_rule.this",
            "module.rds.aws_cloudwatch_event_target.this",
            "module.rds.aws_db_instance.this",
            "module.rds.aws_db_subnet_group.this",
            "module.rds.aws_iam_instance_profile.this",
            "module.rds.aws_iam_policy.lambda_basic",
            "module.rds.aws_iam_role.ec2_role",
            "module.rds.aws_iam_role.lambda_role",
            "module.rds.aws_iam_role_policy_attachment.ec2_attach_policies",
            "module.rds.aws_iam_role_policy_attachment.lambda_attach_policies",
            "module.rds.aws_lambda_function.this",
            "module.rds.aws_lambda_permission.allow_cloudwatch",
            "module.rds.aws_s3_bucket.this",
            "module.rds.aws_s3_object.object",
            "module.rds.aws_security_group.db_sg",
            "module.rds.data.archive_file.python_lambda_package",
            "module.rds.data.aws_caller_identity.current",
            "module.rds.data.aws_cloudwatch_event_bus.default",
            "module.rds.data.aws_region.current",
            "module.rds.local_file.name",
            "module.rds.random_id.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:454340114714:security-group/sg-0f6f8486efd554a88",
            "description": "Allow inbound http trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6f8486efd554a88",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_alb_connection",
            "name_prefix": "",
            "owner_id": "454340114714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f21f0eecab4f3234"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.aws_cloudwatch_event_rule.this",
            "module.rds.aws_cloudwatch_event_target.this",
            "module.rds.aws_db_instance.this",
            "module.rds.aws_db_subnet_group.this",
            "module.rds.aws_iam_instance_profile.this",
            "module.rds.aws_iam_policy.lambda_basic",
            "module.rds.aws_iam_role.ec2_role",
            "module.rds.aws_iam_role.lambda_role",
            "module.rds.aws_iam_role_policy_attachment.ec2_attach_policies",
            "module.rds.aws_iam_role_policy_attachment.lambda_attach_policies",
            "module.rds.aws_lambda_function.this",
            "module.rds.aws_lambda_permission.allow_cloudwatch",
            "module.rds.aws_s3_bucket.this",
            "module.rds.aws_s3_object.object",
            "module.rds.aws_security_group.db_sg",
            "module.rds.data.archive_file.python_lambda_package",
            "module.rds.data.aws_caller_identity.current",
            "module.rds.data.aws_cloudwatch_event_bus.default",
            "module.rds.data.aws_region.current",
            "module.rds.local_file.name",
            "module.rds.random_id.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2agent_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:454340114714:security-group/sg-028858f10a30122da",
            "description": "Allow inbound http trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028858f10a30122da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_ec2agent_connection",
            "name_prefix": "",
            "owner_id": "454340114714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f21f0eecab4f3234"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.aws_cloudwatch_event_rule.this",
            "module.rds.aws_cloudwatch_event_target.this",
            "module.rds.aws_db_instance.this",
            "module.rds.aws_db_subnet_group.this",
            "module.rds.aws_iam_instance_profile.this",
            "module.rds.aws_iam_policy.lambda_basic",
            "module.rds.aws_iam_role.ec2_role",
            "module.rds.aws_iam_role.lambda_role",
            "module.rds.aws_iam_role_policy_attachment.ec2_attach_policies",
            "module.rds.aws_iam_role_policy_attachment.lambda_attach_policies",
            "module.rds.aws_lambda_function.this",
            "module.rds.aws_lambda_permission.allow_cloudwatch",
            "module.rds.aws_s3_bucket.this",
            "module.rds.aws_s3_object.object",
            "module.rds.aws_security_group.db_sg",
            "module.rds.data.archive_file.python_lambda_package",
            "module.rds.data.aws_caller_identity.current",
            "module.rds.data.aws_cloudwatch_event_bus.default",
            "module.rds.data.aws_region.current",
            "module.rds.local_file.name",
            "module.rds.random_id.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:454340114714:security-group/sg-01728f5d713b99a8b",
            "description": "Allow inbound trafic for db",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01728f5d713b99a8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_db_connection",
            "name_prefix": "",
            "owner_id": "454340114714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_mysql"
            },
            "tags_all": {
              "Name": "allow_mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f21f0eecab4f3234"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:454340114714:internet-gateway/igw-011d4ffd3879c9d48",
            "id": "igw-011d4ffd3879c9d48",
            "owner_id": "454340114714",
            "tags": {
              "Name": "IGW-prod-bloodbank"
            },
            "tags_all": {
              "Name": "IGW-prod-bloodbank"
            },
            "vpc_id": "vpc-0f21f0eecab4f3234"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:454340114714:route-table/rtb-07c07573e35151279",
            "id": "rtb-07c07573e35151279",
            "owner_id": "454340114714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-011d4ffd3879c9d48",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-prod-bloodbank"
            },
            "tags_all": {
              "Name": "RT-prod-bloodbank"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f21f0eecab4f3234"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016a4b9335f5202e9",
            "route_table_id": "rtb-07c07573e35151279",
            "subnet_id": "subnet-0af41d9e3f06a1851"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017ea78af0ead0ccf",
            "route_table_id": "rtb-07c07573e35151279",
            "subnet_id": "subnet-0eb8232855a02a023"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:454340114714:subnet/subnet-0cf15e5794acd2fdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf15e5794acd2fdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "454340114714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-eu-north-1-eun1-az1-private-prod-bloodbank-stack"
            },
            "tags_all": {
              "Name": "subnet-eu-north-1-eun1-az1-private-prod-bloodbank-stack"
            },
            "vpc_id": "vpc-0f21f0eecab4f3234"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:454340114714:subnet/subnet-05cd2ef247b6471b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cd2ef247b6471b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "454340114714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-eu-north-1-eun1-az2-private-prod-bloodbank-stack"
            },
            "tags_all": {
              "Name": "subnet-eu-north-1-eun1-az2-private-prod-bloodbank-stack"
            },
            "vpc_id": "vpc-0f21f0eecab4f3234"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:454340114714:subnet/subnet-0af41d9e3f06a1851",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af41d9e3f06a1851",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "454340114714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-eu-north-1-eun1-az1-public-prod-bloodbank-stack"
            },
            "tags_all": {
              "Name": "subnet-eu-north-1-eun1-az1-public-prod-bloodbank-stack"
            },
            "vpc_id": "vpc-0f21f0eecab4f3234"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:454340114714:subnet/subnet-0eb8232855a02a023",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb8232855a02a023",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "454340114714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-eu-north-1-eun1-az2-public-prod-bloodbank-stack"
            },
            "tags_all": {
              "Name": "subnet-eu-north-1-eun1-az2-public-prod-bloodbank-stack"
            },
            "vpc_id": "vpc-0f21f0eecab4f3234"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:454340114714:vpc/vpc-0f21f0eecab4f3234",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f1955e539dabc7ca",
            "default_route_table_id": "rtb-047064654af3931cc",
            "default_security_group_id": "sg-0a9fbd7cd268f636b",
            "dhcp_options_id": "dopt-0d1fb4663100273f3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f21f0eecab4f3234",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-047064654af3931cc",
            "owner_id": "454340114714",
            "tags": {
              "Name": "vpc-eu-north-1-prod-bloodbank-stack"
            },
            "tags_all": {
              "Name": "vpc-eu-north-1-prod-bloodbank-stack"
            }
          }
        }
      ]
    }
  ]
}